syntax = "proto3";

package taskmanager.pb;

import "Username.proto";
import "Hash.proto";
option go_package = "github.com/DiarmuidMalanaphy/Task-Manager/standards";

message InitialVerification {
  Username Username = 1;
  Hash Hash = 2;
}

message VerificationToken {
  bytes token = 1;  // Hex-encoded string of the 32-byte token
  uint64 userID = 2;
  uint64 expires = 3;
}
